--- a/WeatherHistoryViewer.Web/Client/Pages/Index.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/Index.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
 @using WeatherHistoryViewer.Core.Models.Weather
+@using WeatherHistoryViewer.Core.ViewModels
 @using WeatherHistoryViewer.Services.Helpers
 @inject HttpClient Http
 
-@if (weatherOverviews == null)
+@if (_weatherOverviews == null)
 {
     <p>
         <em>Loading...</em>
@@ -11,6 +12,7 @@
 }
 else
 {
+    <LegendaComponent WeatherLegenda="@_weatherLegenda"></LegendaComponent>
     <table class="table table-bordered" style="width: auto;">
         <thead>
             <tr>
@@ -24,17 +26,18 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var overview in weatherOverviews)
+            @foreach (var overview in _weatherOverviews)
             {
-                var backgroundColor = $"hsla({Math.Round((overview.AvgTemp / avgTempMax - 1) * -1 * 240,0)},100%,50%,0.5)";
                 <tr>
                     <th>@overview.LocationName</th>
-                    <th style="background-color:@backgroundColor">@overview.AvgTemp</th>
-                    <th>@overview.MaxTemp</th>
+                    <th class="@overview.CssBackgroundClass.AvgTemp">@overview.AvgTemp</th>
+                    <th class="@overview.CssBackgroundClass.MaxTemp">@overview.MaxTemp</th>
                     <th>@overview.DateOfMaxTemp</th>
-                    <th>@overview.MinTemp</th>
+
+                    <th class="@overview.CssBackgroundClass.MinTemp">@overview.MinTemp</th>
                     <th>@overview.DateOfMinTemp</th>
-                    <th>@overview.AvgSunHours</th>
+
+                    <th class="@overview.CssBackgroundClass.SunHour">@overview.SunHour</th>
                 </tr>
             }
         </tbody>
@@ -43,12 +46,13 @@ else
 
 @code {
 
-    private List<WeatherOverview> weatherOverviews;
-    private double avgTempMax = double.NaN;
+    private List<WeatherOverview> _weatherOverviews;
+    private WeatherLegenda _weatherLegenda;
 
     protected override async Task OnInitializedAsync()
     {
-        weatherOverviews = await Http.GetFromJsonAsync<List<WeatherOverview>>("/api/overview");
-        avgTempMax = weatherOverviews.Max(s => s.AvgTemp);
+        var weatherOverviewViewModel = await Http.GetFromJsonAsync<WeatherOverviewViewModel>("/api/overview");
+        _weatherOverviews = weatherOverviewViewModel.WeatherOverviews;
+        _weatherLegenda = weatherOverviewViewModel.WeatherLegenda;
     }
 }
