Added table components

--- a/WeatherHistoryViewer.Web/Client/Pages/Index.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/Index.razor
@@ -2,6 +2,7 @@
 @using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Core.ViewModels
 @using WeatherHistoryViewer.Services.Helpers
+@using WeatherHistoryViewer.Web.Client.Shared.WeatherTables
 @inject HttpClient Http
 
 @if (_weatherOverviews == null)
@@ -13,35 +14,7 @@
 else
 {
     <LegendaComponent WeatherLegenda="@_weatherLegenda"></LegendaComponent>
-    <table class="table table-bordered" style="width: auto;">
-        <thead>
-            <tr>
-                <th>City</th>
-                <th>Avg temp</th>
-                <th>Max temp</th>
-                <th>Date of max temp</th>
-                <th>Min temp</th>
-                <th>Date of min temp</th>
-                <th>Average sun hours</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var overview in _weatherOverviews)
-            {
-                <tr>
-                    <th>@overview.LocationName</th>
-                    <th class="@overview.CssBackgroundClass.AvgTemp">@overview.AvgTemp</th>
-                    <th class="@overview.CssBackgroundClass.MaxTemp">@overview.MaxTemp</th>
-                    <th>@overview.DateOfMaxTemp</th>
-
-                    <th class="@overview.CssBackgroundClass.MinTemp">@overview.MinTemp</th>
-                    <th>@overview.DateOfMinTemp</th>
-
-                    <th class="@overview.CssBackgroundClass.SunHour">@overview.SunHour</th>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <OverviewTableComponent WeatherOverviews="@_weatherOverviews"></OverviewTableComponent>
 }
 
 @code {
