--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/OverviewTableComponent.razor
@@ -1,4 +1,4 @@
-﻿@using WeatherHistoryViewer.Core.Models.Weather;
+﻿@using WeatherHistoryViewer.Core.Models;
 
 <table class="table table-bordered" style="width: auto;">
     <thead>
