--- a/WeatherHistoryViewer.Web/Client/Shared/LegendaComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/LegendaComponent.razor
@@ -1,13 +1,13 @@
-﻿@using WeatherHistoryViewer.Core.Models.Weather;
+﻿@using WeatherHistoryViewer.Core.Models;
 @using WeatherHistoryViewer.Config;
 
 <div class="legenda-container">
     <div>
-        <h3 class="text-center">
+        <h3 class="text/center">
             <b>@NameOfLegendaValue</b>
         </h3>
     </div>
-    <div class="color_range"></div>
+    <div class="color-range"></div>
     <div class="flex-container">
             <p class=" text-left">
                 @Math.Round(MinValue,0)
