--- a/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/WeekTableComponent.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/WeatherTables/WeatherOf/WeekTableComponent.razor
@@ -1,4 +1,5 @@
 ﻿@using WeatherHistoryViewer.Core.Models.Weather
+@using WeatherHistoryViewer.Core.Models
 
 <LegendaComponent WeatherLegenda="@WeatherLegenda" OverrideNameOfLegendaValue="@DisplayedPropertys.ToString()"></LegendaComponent>
 <table class="table table-bordered" style="width: auto;">
@@ -17,7 +18,7 @@
     {
         var week = WeatherOfWeek[i];
         <tr>
-            <th>@week.First().Date.Split("-")[0]</th>
+            <th>@week.First().Date.Split("/")[0]</th>
             @foreach (var day in week)
             {
                 <td>@day.GetType().GetProperty(DisplayedPropertys.ToString()).GetValue(day)</td>
